# brew-guide

./: .env.example  DEPLOY.md  Dockerfile  REVERSE_PROXY.md  docker-compose.example.yml  docker-compose.roy.yml  docker-compose.yml  next.config.mjs  nginx.conf  package-lock.json  package.json
.github/workflows/: docker-publish.yml
android/: capacitor.settings.gradle
android/app/: build.gradle
ios/App/: Podfile
ios/App/App.xcodeproj/: project.pbxproj
public/: sw.js  sw.js.map  version.json  workbox-ad095a1e.js  workbox-ad095a1e.js.map
scripts/: generate-sw.mjs
server/: index.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: layout.tsx  page.tsx
src/components/coffee-bean/List/components/StatsView/: index.tsx  (+1 more)
src/components/common/modals/: BackupReminderModal.tsx
src/components/layout/: AppModals.tsx  NavigationBar.tsx  PWAInstallBanner.tsx  PWAUpdatePrompt.tsx
src/components/notes/Form/: RatingDrawer.tsx
src/components/notes/List/: ListView.tsx
src/components/settings/: ExperimentalSettings.tsx  Settings.tsx
src/components/settings/data-settings/: DataManagementSection.tsx
src/lib/api/: client.ts  legacy-bridge.ts
src/lib/core/: config.ts  dataManager.ts  db.ts  storageUtils.ts
src/lib/stores/: brewingNoteStore.ts  coffeeBeanStore.ts  customMethodStore.ts  grinderStore.ts  settingsStore.ts
src/lib/supabase/realtime/: InitialSyncManager.ts  offlineQueue.ts
src/lib/sync/: UnifiedSyncService.ts
src/lib/ui/: imageViewer.ts
src/lib/utils/: coffeeBeanUtils.ts  dataExportUtils.ts  versionCheck.ts
