[package]
name = "brew-guide"
version = "1.5.13"
description = "A coffee brewing assistant app"
authors = ["Brew Guide Team"]
license = "GPL-3.0"
repository = "https://github.com/chuthree/brew-guide"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
chrono = "0.4"
